--- a/adapter/adapter/pom.xml
+++ b/adapter/adapter/pom.xml
@@ -4,11 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.chat</groupId>
-  <artifactId>mediator</artifactId>
+  <groupId>com.adapter</groupId>
+  <artifactId>adapter</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>mediator</name>
+  <name>auction</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -51,13 +51,13 @@
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
-              <configuration>  
+            <configuration>  
                 <archive>  
                     <manifest>  
-                        <mainClass>com.chat.App</mainClass>  
+                        <mainClass>com.adapter.App</mainClass>  
                     </manifest>  
                 </archive>  
-            </configuration>
+            </configuration> 
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
